@@ -36,47 +36,48 @@
 		<maven.compiler.target>21</maven.compiler.target>
 		<maven.compiler.source>21</maven.compiler.source>
 		<dawdler.build.version>0.1.5-jdk21-RELEASES</dawdler.build.version>
-		<slf4j.version>2.0.17</slf4j.version>
-		<ch.qos.logback.version>1.5.25</ch.qos.logback.version>
-		<ch.qos.logback.common.version>2.0.7</ch.qos.logback.common.version>
-		<org.ow2.asm.version>9.8</org.ow2.asm.version>
+		<slf4j.version>2.0.18</slf4j.version>
+		<ch.qos.logback.version>1.6.1</ch.qos.logback.version>
+		<ch.qos.logback.common.version>2.0.14</ch.qos.logback.common.version>
+		<org.ow2.asm.version>9.10.1</org.ow2.asm.version>
 		<commons-pool2.version>2.13.1</commons-pool2.version>
 		<kryo.version>5.6.2</kryo.version>
-		<org.apache.curator.version>5.7.0</org.apache.curator.version>
+		<org.apache.curator.version>5.9.0</org.apache.curator.version>
 		<zookeeper.version>3.9.5</zookeeper.version>
-		<jakarta.servlet-api.version>6.1.0</jakarta.servlet-api.version>
-		<jackson-core.version>2.21.1</jackson-core.version>
-		<jackson-datatype-jsr310.version>2.21.1</jackson-datatype-jsr310.version>
-		<jackson-annotations.version>2.21</jackson-annotations.version>
-		<jackson-databind.version>2.21.1</jackson-databind.version>
-		<jackson-dataformat-yaml.version>2.21.1</jackson-dataformat-yaml.version>
+		<jakarta.servlet-api.version>6.0.0</jakarta.servlet-api.version>
+		<jackson-core.version>2.22.1</jackson-core.version>
+		<jackson-datatype-jsr310.version>2.22.1</jackson-datatype-jsr310.version>
+		<jackson-annotations.version>2.22</jackson-annotations.version>
+		<jackson-databind.version>2.22.1</jackson-databind.version>
+		<jackson-dataformat-yaml.version>2.22.1</jackson-dataformat-yaml.version>
 		<velocity.version>2.4.1</velocity.version>
 		<jedis.version>7.3.0</jedis.version>
-		<rabbitmq.version>5.28.0</rabbitmq.version>
-		<kafka.version>4.2.0</kafka.version>
-		<caffeine.version>3.2.3</caffeine.version>
-		<jsoup.version>1.22.1</jsoup.version>
+		<rabbitmq.version>5.34.0</rabbitmq.version>
+		<kafka.version>4.3.1</kafka.version>
+		<caffeine.version>3.2.4</caffeine.version>
+		<jsoup.version>1.23.1</jsoup.version>
 		<aspectj.version>1.9.25.1</aspectj.version>
-		<javassist.version>3.28.0-GA</javassist.version>
-		<commons-jexl3.version>3.6.2</commons-jexl3.version>
-		<commons-io.version>2.14.0</commons-io.version>
-		<snakeyaml.version>2.5</snakeyaml.version>
+		<javassist.version>3.32.0-GA</javassist.version>
+		<commons-jexl3.version>3.7.0</commons-jexl3.version>
+		<commons-io.version>2.22.0</commons-io.version>
+		<snakeyaml.version>2.6</snakeyaml.version>
 		<consul-api.version>1.4.5</consul-api.version>
 		<httpclient.version>4.5.14</httpclient.version>
-		<elasticsearch.version>8.18.3</elasticsearch.version>
-		<pinpoint.version>3.0.1</pinpoint.version>
-		<qdox.version>2.0.3</qdox.version>
+		<elasticsearch.version>9.5.0</elasticsearch.version>
+		<pinpoint.version>3.1.0</pinpoint.version>
+		<qdox.version>2.1.0</qdox.version>
 		<quartz.version>2.5.2</quartz.version>
-		<gson.version>2.13.2</gson.version>
+		<gson.version>2.14.0</gson.version>
 		<mybatis.version>3.5.19</mybatis.version>
 		<jakarta.websocket.version>2.2.0</jakarta.websocket.version>
+		<vertx.version>5.1.6</vertx.version>
 		<maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
-		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-		<maven-jar-plugin.version>3.5.0</maven-jar-plugin.version>
-		<versions-maven-plugin.version>2.3</versions-maven-plugin.version>
-		<central-publishing-maven-plugin.version>0.4.0</central-publishing-maven-plugin.version>
-		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
-		<maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
+		<maven-source-plugin.version>3.4.0</maven-source-plugin.version>
+		<maven-jar-plugin.version>3.5.1</maven-jar-plugin.version>
+		<versions-maven-plugin.version>2.21.0</versions-maven-plugin.version>
+		<central-publishing-maven-plugin.version>0.11.0</central-publishing-maven-plugin.version>
+		<maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
+		<maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
 		<serverId>dawdler-series</serverId>
 	</properties>
 	<dependencyManagement>
@@ -246,11 +247,16 @@
 				<artifactId>dawdler-client</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>club.dawdler</groupId>
-				<artifactId>dawdler-client-plug-session</artifactId>
-				<version>${dawdler.build.version}</version>
-			</dependency>
+		<dependency>
+			<groupId>club.dawdler</groupId>
+			<artifactId>dawdler-client-plug-session</artifactId>
+			<version>${dawdler.build.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>club.dawdler</groupId>
+			<artifactId>dawdler-client-plug-jwt</artifactId>
+			<version>${dawdler.build.version}</version>
+		</dependency>
 			<dependency>
 				<groupId>club.dawdler</groupId>
 				<artifactId>dawdler-client-plug-web</artifactId>
@@ -458,9 +464,19 @@
 			</dependency>
 			<dependency>
 				<groupId>club.dawdler</groupId>
+				<artifactId>dawdler-gateway-discovery-center-zookeeper</artifactId>
+				<version>${dawdler.build.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>club.dawdler</groupId>
 				<artifactId>dawdler-discovery-center-consul-core</artifactId>
 				<version>${dawdler.build.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>club.dawdler</groupId>
+				<artifactId>dawdler-discovery-center-client-plug</artifactId>
+				<version>${dawdler.build.version}</version>
+			</dependency>			
 			<dependency>
 				<groupId>club.dawdler</groupId>
 				<artifactId>dawdler-discovery-center-server-plug</artifactId>
@@ -587,6 +603,26 @@
 				<version>${dawdler.build.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>club.dawdler</groupId>
+				<artifactId>dawdler-web-gateway</artifactId>
+				<version>${dawdler.build.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>club.dawdler</groupId>
+				<artifactId>dawdler-i18n-core</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>club.dawdler</groupId>
+				<artifactId>dawdler-server-plug-i18n</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>club.dawdler</groupId>
+				<artifactId>dawdler-client-plug-i18n</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>co.elastic.clients</groupId>
 				<artifactId>elasticsearch-java</artifactId>
 				<version>${elasticsearch.version}</version>
@@ -617,12 +653,27 @@
 				<artifactId>jakarta.websocket-api</artifactId>
 				<version>${jakarta.websocket.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>jakarta.websocket</groupId>
-				<artifactId>jakarta.websocket-client-api</artifactId>
-				<version>${jakarta.websocket.version}</version>
-			</dependency>
-		</dependencies>
+		<dependency>
+			<groupId>jakarta.websocket</groupId>
+			<artifactId>jakarta.websocket-client-api</artifactId>
+			<version>${jakarta.websocket.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.vertx</groupId>
+			<artifactId>vertx-core</artifactId>
+			<version>${vertx.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.vertx</groupId>
+			<artifactId>vertx-web</artifactId>
+			<version>${vertx.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.vertx</groupId>
+			<artifactId>vertx-web-client</artifactId>
+			<version>${vertx.version}</version>
+		</dependency>
+	</dependencies>
 	</dependencyManagement>
 	<build>
 		<plugins>
@@ -636,55 +687,7 @@
 					<tokenAuth>true</tokenAuth>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-gpg-plugin</artifactId>
-				<version>${maven-gpg-plugin.version}</version>
-				<executions>
-					<execution>
-						<id>sign-artifacts</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>sign</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>${maven-javadoc-plugin.version}</version>
-				<configuration>
-					<additionalJOptions>
-						<additionalJOption>--add-exports=java.base/jdk.internal.loader=dawdler.util</additionalJOption>
-						<additionalJOption>-X</additionalJOption>
-					</additionalJOptions>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>${maven-source-plugin.version}</version>
-				<configuration>
-					<attach>true</attach>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>compile</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -741,6 +744,7 @@
 		<module>dawdler-client-plug-web</module>
 		<module>dawdler-client-plug-validator</module>
 		<module>dawdler-client-plug-session</module>
+		<module>dawdler-client-plug-jwt</module>
 		<module>dawdler-circuit-breaker</module>
 		<module>dawdler-load-bean</module>
 		<module>dawdler-client-plug-velocity</module>
@@ -764,5 +768,7 @@
 		<module>dawdler-load-plug</module>
 		<module>dawdler-dao-plug</module>
 		<module>dawdler-kafka-plug</module>
+		<module>dawdler-i18n-plug</module>
+		<module>dawdler-web-gateway</module>
 	</modules>
 </project>
